[JAVA-41884]