@@ -38,6 +38,7 @@
 
     <properties>
         <icu4j.version>61.1</icu4j.version>
+        <argLine>-Djava.locale.providers=COMPAT</argLine>
         <commons-text.version>1.9</commons-text.version>
     </properties>
 
